# opengl-template

./: .gitmodules  CMakeLists.txt  readme.md
src/: main.cpp
